# axom

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .grapeconfig  .mailmap  .readthedocs.yml  .travis.yml  .uberenv_config.json  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Doxyfile  LICENSE  README  README.md  RELEASE  RELEASE-NOTES  RELEASE-NOTES.md  RELEASE_NOTES.md  UPDATE_LOG  VERSION  azure-pipelines.yml  bsdformat.xml  codecov.yml  config-build.py  eclipse_codestyle.xml  oslic7-git-3743628.core  ruby-toss_4_x86_64_ib-clang@14.0.6.cmake  sbatchScript  suppressions.asan  triangle_2d.yaml  unit_triangle.stl
components/datastore/src/: CMakeLists.txt  DataGroup.cpp  DataGroup.hpp  DataObject.hpp  DataStore.hpp  Types.hpp  c-datastore.cpp  datastore.h  test.cpp
datastore/: CMakeLists.txt  DataGroup.hpp  DataObject.cpp  DatastoreInterface.hpp  datastore.py  test.py
src/: .clang-format  .clang-tidy  Attributes.hpp  CMakeLists.txt  DataFunction.cpp  DataFunction.hpp  DataFunctionCompiled.cpp  DataFunctionCompiled.hpp  DataGroup.cpp  DataGroup.hpp  DataMember.hpp  DataObject.cpp  DataObject.hpp  DataUserType.cpp  DataUserType.hpp  DatastoreInterface.cpp  DatastoreInterface.hpp  Types.hpp  Utilities.hpp  c-datastore.cpp  conf.py  datastore.h  index.rst  test.cpp  uncrustify.cfg
src/Examples/: ShockTube.cc
src/axom/: Axom.cpp  CMakeLists.txt  config.hpp.in  doxygen_mainpage.md  export.h.in  mainpage.md
src/axom/core/: AnnotationMacros.hpp  Array.hpp  ArrayBase.hpp  ArrayIndexer.hpp  ArrayIteratorBase.hpp  ArrayView.hpp  CMakeLists.txt  ConduitMemCallbacks.cpp  ConduitMemCallbacks.hpp  ConduitMemory.cpp  ConduitMemory.hpp  DeviceHash.hpp  FlatMap.hpp  FlatMapUtil.hpp  FlatMapView.hpp  IndexedCollection.hpp  ItemCollection.hpp  IteratorBase.hpp  ListCollection.hpp  MCArray.hpp  MDMapping.hpp  Macros.hpp  Map.hpp  MapCollection.hpp  NumericArray.hpp  NumericLimits.hpp  Path.cpp  Path.hpp  README.md  RangeAdapter.hpp  StackArray.hpp  StaticArray.hpp  Types.cpp  Types.hpp  doxygen_mainpage.md  execution_space.hpp  memory_management.hpp
src/axom/curves/: CMakeLists.txt  README.md  curves.cpp  curves.hpp
src/axom/inlet/: Backend.hpp  CMakeLists.txt  ConduitReader.cpp  ConduitReader.hpp  ConduitWriter.cpp  ConduitWriter.hpp  Container.cpp  Container.hpp  DocWriter.cpp  DocWriter.hpp  Field.cpp  Field.hpp  Function.cpp  Function.hpp  Group.cpp  Group.hpp  GroupField.hpp  Inlet.cpp  Inlet.hpp  InletVector.hpp  IntField.hpp  JSONReader.cpp  JSONReader.hpp  JSONSchemaWriter.cpp  JSONSchemaWriter.hpp  LuaMap.cpp  LuaMap.hpp  LuaReader.cpp  LuaReader.hpp  Map.hpp  MapBackend.hpp  Proxy.cpp  Proxy.hpp  README.md  Reader.hpp  SchemaCreator.hpp  SphinxDocWriter.cpp  SphinxDocWriter.hpp  SphinxWriter.cpp  SphinxWriter.hpp  (+16 more)
src/axom/klee/: CMakeLists.txt  Dimensions.hpp  Geometry.cpp  Geometry.hpp  GeometryOperators.cpp  GeometryOperators.hpp  GeometryOperatorsIO.cpp  GeometryOperatorsIO.hpp  IO.cpp  IO.hpp  IOUtil.cpp  IOUtil.hpp  KleeError.cpp  KleeError.hpp  Shape.cpp  Shape.hpp  ShapeSet.cpp  ShapeSet.hpp  Units.cpp  Units.hpp  doxygen_mainpage.md  io.cpp
src/axom/lumberjack/: BinaryTreeCommunicator.cpp  BinaryTreeCommunicator.hpp  CMakeLists.txt  Combiner.hpp  Communicator.hpp  LineFileTagCombiner.hpp  Lumberjack.cpp  Lumberjack.hpp  MPIUtility.cpp  MPIUtility.hpp  Message.cpp  Message.hpp  NonBlockingRootCommunicator.cpp  NonBlockingRootCommunicator.hpp  NonCollectiveRootCommunicator.cpp  NonCollectiveRootCommunicator.hpp  README.md  RootCommunicator.cpp  RootCommunicator.hpp  TextEqualityCombiner.hpp  TextTagCombiner.hpp  doxygen_mainpage.md
src/axom/mint/: CMakeLists.txt  README.md  doxygen_mainpage.md
src/axom/mir/: BlendGroupBuilder.hpp  CMakeLists.txt  CellClipper.cpp  CellClipper.hpp  CellData.cpp  CellData.hpp  CellGenerator.cpp  CellGenerator.hpp  ClipCaseManager.hpp  ClipField.hpp  ClipFieldFilter.cpp  ClipFieldFilter.hpp  ClipFieldFilterDevice.hpp  ClipOptions.hpp  CoordsetBlender.hpp  CoordsetSlicer.hpp  ElementFieldToVertexField.hpp  ElviraAlgorithm.cpp  ElviraAlgorithm.hpp  EquiZAlgorithm.cpp  EquiZAlgorithm.hpp  ExtractZones.hpp  FieldBlender.hpp  FieldSlicer.hpp  InterfaceReconstructor.cpp  InterfaceReconstructor.hpp  MIRAlgorithm.cpp  MIRAlgorithm.hpp  MIRMesh.cpp  MIRMesh.hpp  MIRMeshTypes.hpp  MIROptions.hpp  MIRUtilities.hpp  MakeUnstructured.hpp  MatsetSlicer.hpp  MergeMeshes.hpp  MeshTester.cpp  MeshTester.hpp  NodeToZoneRelation.hpp  NodeToZoneRelationBuilder.hpp  (+16 more)
src/axom/multimat/: CMakeLists.txt  README.md  doxygen_mainpage.md  mmfield.hpp  mmsubfield.hpp  multimat.cpp  (+1 more)
src/blt/: SetupBLT.cmake
src/cmake/: ATKMacros.cmake  ATKOptions.cmake  AxomConfig.cmake  AxomMacros.cmake  AxomOptions.cmake  AxomVersion.cmake  CMakeBasics.cmake  CMakeConfigureFile.cmake  CodeCoverage.cmake  Dashboard.cmake.in  EnableCompilerWarningsAsErrors.cmake  EnableExtraCompilerWarnings.cmake  FindPython.cmake  FindSparsehash.cmake  FindValgrind.cmake  PreventInSourceBuilds.cmake  PrivateMacros.cmake  Setup3rdParty.cmake  SetupCmakeOptions.cmake  SetupCodeChecks.cmake  SetupCodeMetrics.cmake  SetupCompilerOptions.cmake  SetupDocs.cmake  SetupGenerate.cmake  SetupShroud.cmake  axom-config.cmake.in  copy_headers.cmake
src/components/: CMakeLists.txt  mainpage.dox  mainpage.md
src/docs/: CMakeLists.txt  dependencies.dot  index.rst  licenses.rst
src/examples/: CMakeLists.txt
src/include/: CMakeLists.txt  CommonTypes.hpp  Macros.hpp  Types.hpp  config.hpp.in  path_config.hpp.in
src/python/: DataFunctionPython.cpp  DataFunctionPython.hpp  ds.yaml  dsmodule.cpp  dsmodule.h
src/serial/: dumpfile.cpp  dumpfile.h
src/test/: Makefile.lt  test1.cpp  test1c.c  testds.cpp  testds.hpp  testfunc.cpp  teststruct.cpp
src/tools/: CMakeLists.txt  convert_sidre_protocol.cpp  data_collection_util.cpp  gen-multidom-structured-mesh.py  gen-strided-structured-mesh.py  mesh_converter.cpp  mesh_tester.cpp  verify_mesh_blueprint.cpp
src/util/: CMakeLists.txt  convert_sidre_protocol.cpp  mesh_tester.cpp
(+4003 files in other folders)
