# Copyright (c) 2017-2021, Lawrence Livermore National Security, LLC and
# other Axom Project Developers. See the top-level LICENSE file for details.
#
# SPDX-License-Identifier: (BSD-3-Clause)
#------------------------------------------------------------------------------
# documentation targets
#------------------------------------------------------------------------------

if(DOXYGEN_FOUND)
    add_subdirectory(doxygen)
endif()
